# research_ai-usage-in-science

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  _[FLAT] Author Agreement Sheet.xlsx  _config.yml  author_agreement.xlsx  compute_ollama_input_tokens.py  prompts  pyproject.toml  run.bash  test.md
aius/: __init__.py  analysis.py  cli.py  db.py  downloader.py  factory.py  filterDocuments.py  filter_documents.py  identify_documents.py  init.py  llm_identify_ptms_analysis.py  llm_identify_reuse_analysis.py  llm_prompt_engineering.py  llm_uses_dl_analysis.py  llm_uses_ptms_analysis.py  load_author_agreement.py  load_pilot_study.py  load_prompt_engineering.py  main.py  main.py.old  main.py.old.1  openalex.py  pandoc.py  retrieve_content.py  runner.py  runners.py  sampleDocuments.py  searchFunc.py
aius/analysis/: __init__.py  alcf.py  backend.py  metis.py  ollama.py  runner.py  sophia.py
aius/analyze/: __init__.py  backend.py  data_models.py  metis.py  ollama.py  openai.py  openaibatch.py  prompts.py  runner.py  sophia.py
aius/cli/: cli.py  (+3 more)
alcf-inference-server/: alcf_inference_token.py  check_batch_status.bash  create_batch.py  execute_batches.py  inference_api.py
analysis/: 1_extractPublishingInformation.py
author-agreement/: createAuthorAgreementResults.py
automatedAnalysis/: downloadPDFs.py  main.py
count-tokens/: count_formatted_jats_tokens.py  count_jats_tokens.py  count_unformatted_jats_tokens.py  test.md
figures/: README.md  breakdown_of_plos_keyword_searches.py  figQ.py  figQ_update.py  figR.py  figR_1.py  figS.py  figT.py  figU.py  figV.py  figW.py  figX.py  figY.py  frequency_of_natural_science_topics.py  frequency_of_top_5_primary_topics_nature_plos.py  number_of_natural_science_papers_published_per_year.py  number_of_papers_published_per_year.py  papers_using_dl_ptms.py  total_plos_nature_natural_science_papers.py  total_plos_nature_papers.py
llm-analysis/: 0_do_the_authors_use_deep_learning.py  0_preprocess_pdfs.py  1_do_the_authors_use_deep_learning.py  2_are_pre-trained_deep_learning_models_used.py  3_what_pre_trained_deep_learning_models_are_used.py  4_what_pre_trained_deep_learning_model_reuse_method_was_used.py  analysis.py  automatic_eval_q1.py  evaluate.py  prompts.py  question_0.py  question_1.py  question_2.py  question_3.py  run.bash  runner.bash  runner_2.bash
openalex-topics/: statistics.py
pilot-study/: README.md  study.py
scripts/: 0a_analyzeJournalSearchResults.py  compute_aggregate_ptm_reuse_method_usage.py  compute_longitudinal_dl_usage.py  compute_longitudinal_ptm_reuse_method_usage.py  compute_longitudinal_ptm_usage.py  compute_topic_dl_usage.py  compute_topic_ptm_reuse_method_usage.py  compute_topic_ptm_usage.py  createAuthorAgreementResults.py  create_prompt_testing_dataset.py  delete_openai_files.py  dijkstra.bash  download_allofplos.bash  extractPaperURLsFromSearchResults.py  load_author_agreement.py  load_parquet_2_db.py  load_pilot_study.py  load_prompt_engineering_papers.py  migrate_articles_search_fk.py  pdf2md.bash  plos_URL2DOI.py  polaris.pbs  process_uses_dl.py  rebuild_articles_with_fk.py  run.bash  scopusTable.py  sophia.pbs  stratified_sample.py  upload_openai_batches.py
src/: 0_searchJournal.py  analysis.py  db.py  downloader.py  main.py  plot_TotalNumberOfDocumentsAndNSDocuments_Grouped.py  plot_TotalNumberOfDocumentsPerYearByKeyword.py  plot_TotalNumberOfNaturalScienceDocumentsPerYearByKeyword.py  searchFunc.py  statistics.py
statistics/: aggregate_field_dl_usage.py  aggregate_field_ptm_usage.py  aggregate_field_reuse_method.py  aggregate_impact.py  count_ptm_reuse_categories.py  count_ptms_3_fields.py  count_ptms_all_fields.py  count_unique_ptm_names.py  document_breakdown.py  first_ptm_reuse_year.py  get_openalex_dates.py  longitudinal_field_dl_usage.py  longitudinal_field_ptm_usage.py  normalize_ptm_names.py  sample_uses_dl.py  top_natural_science_fields_by_ptm_reuse.py
tests/: test_analyze_openai.py
(+176 files in other folders)
