[project]
name = "aius"
version = "1.1.0"
description = "Tooling to support the analysis of AI usage within scientific domains"
authors = [{ name = "Nicholas M. Synovic", email = "nicholas.synovic@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
keywords = [
    "research",
    "AI",
    "software engineering",
    "science",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "pandas>=2.2.0,<3",
    "progress~=1.6",
    "requests>=2.31.0,<3",
    "click>=8.1.7,<9",
    "bs4>=0.0.2,<0.0.3",
    "lxml>=5.1.0,<6",
    "zettelgeist>=1.1.5,<2",
    "typedframe>=0.11.0,<0.12",
    "langchain>=0.2.7,<0.3",
    "langchain-core>=0.2.12,<0.3",
    "langchain-community>=0.2.7,<0.3",
    "matplotlib>=3.9.1,<4",
    "seaborn>=0.13.2,<0.14",
    "ollama>=0.3.1,<0.4",
    "langchain-ollama>=0.1.1,<0.2",
    "fuzzywuzzy>=0.18.0,<0.19",
    "pydantic>=2.10.5,<3",
    "ratelimiter>=1.2.0.post0,<2",
    "openpyxl>=3.1.5,<4",
    "pypdf>=5.4.0,<6",
]

[project.urls]
Homepage = "https://github.com/NicholasSynovic/research_ai-usage-in-science"
Repository = "https://github.com/NicholasSynovic/research_ai-usage-in-science"

[project.scripts]
aius = "aius.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 79
