[project]
name = "aius"
version = "1.3.1"
description = "Tooling to support the analysis of AI usage within scientific domains"
authors = [{ name = "Nicholas M. Synovic", email = "nicholas.synovic@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
keywords = [
    "research",
    "AI",
    "software engineering",
    "science",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "pandas>=2.2.0,<3",
    "progress~=1.6",
    "requests>=2.31.0,<3",
    "bs4>=0.0.2,<0.0.3",
    "lxml>=5.1.0,<6",
    "matplotlib>=3.9.1,<4",
    "seaborn>=0.13.2,<0.14",
    "sqlalchemy>=2.0.43",
    "langchain-community>=0.3.29",
    "pypdf>=6.0.0",
    "tiktoken>=0.11.0",
    "pyarrow>=21.0.0",
    "upsetplot>=0.9.0",
    "click>=8.3.0",
    "mdformat>=0.7.22",
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/NicholasSynovic/research_ai-usage-in-science"
Repository = "https://github.com/NicholasSynovic/research_ai-usage-in-science"

[project.scripts]
aius = "aius.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 79
